# cinemind

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  test.py
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: c34025e1aff2_create_movie_tables.py
docs/: README.md  architecture_notes.md  dataset_setup.md  postgresql_setup.md  quickstart.md  testing.md
scripts/: load_movies.py  test_agent2.py  transform_tmdb.py
src/cinemind/: __init__.py  __version__.py
src/cinemind/agents/: __init__.py  intent_parser_agent.py  intent_retrieval_agent.py  recommendation_agent.py  retrieval_service.py
src/cinemind/api/: __init__.py  main.py  routes.py
src/cinemind/db/: __init__.py  models.py  session.py
src/cinemind/frontend/: app.py
src/cinemind/prompts/: INTENT_PARSER_SYSTEM.md  RECOMMENDATION_AGENT_SYSTEM.md  __init__.py
src/cinemind/retrieval/: search.py  service.py
src/cinemind/schemas/: __init__.py  api.py  base.py  movie.py  preferences.py  recommendation.py  retrieval.py
src/cinemind/services/: recommendation_service.py
tests/: conftest.py  test_agent2_integration.py  test_intent_parser_integration.py  test_intent_parser_unit.py  test_preferences_schema.py  test_recommendation_services.py
