[project]
name = "cinemind"
version = "0.1.0"
description = "LLM-powered movie recommendation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "kaggle>=2.0.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.77.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = true

[tool.uv.sources]
cinemind = { path = "src/cinemind", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
